labs/network-review/allow-from-openshift-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-openshift-ingress
spec:
  podSelector: {}
  ingress:
  - from: 
  - namespaceSelector:
       matchLabels:
          network.openshift.io/policy-group: ingress
